# backend_fastapi_catalog

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  wait-for-db.sh
api/: dependencies.py  schemas.py
api/v1/: __init__.py
api/v1/endpoints/: catalog.py  products.py  properties.py
application/: dto.py  exceptions.py  services.py
domain/: entities.py  repositories.py
infrastructure/db/: database.py  mappings.py  models.py  repositories.py
infrastructure/migrations/: env.py
